resumeCss.css
* {
	margin: 0px;
	padding: 0px;
}

html, body {
	width: 100%;
	height: 150%;
	font-family: 'Montserrat', sans-serif;
	color: white;
}

header {
	min-height: 20%;
	width: 100%;
	background-image: url("images/landscape_bg.jpg");
	background-size: cover;
}

header .nameLabel {
	position: absolute;
	font-size: 26px;
	top: 5%;
	left: 3%;
}
/*
img.headerGradient {
	width: 100%;
	/*height: 100%;
	vertical-align: text-bottom;
	/*min-height: 20%;
	position: absolute;
	background-image: url("images/gradient.png");
	background-size: cover;
}
*/


/***************************************************
	COVER
****************************************************/
#cover {
	position: absolute;
	/*top: 50%;*/
	height: 190%;
	left: 0%;
	width: 100%;
	background-color: #252525;
	z-index: 2;
}

#cover .face {
	border-radius: 50%;
	width: 250px;
	height: 250px;
	overflow: hidden;
	display: inline-block;
	float: left;
	margin-left: 10%;
	margin-right: 5%;
}

.face img {
	width: auto;
	height: 100%;
}

#cover .headerText1 { 
	font-size: 50px;
	font-family: 'Ubuntu', sans-serif;
}

#cover .headerText2 {
	font-size: 60px;
	color: #16B8BF;
}

#cover .subheaderText {
	font-size: 30px;
}

#cover .blueTxt {
	color: #16B8BF;
}

#uncoverBtn {
	background-color: #FFFFFF;
	border-width: 0px;
	border-radius: 2px;

	padding: 10px;

	font-size: 30px;
	color: #16B8BF;
}

#uncoverBtn:hover {
	background-color: #16B8BF;
	color: #FFFFFF;
}


/***************************************************
	NAVBAR
****************************************************/
nav {
	min-height: 6%;
	background-color: #252525;
	font-size: 35px;
}

nav ul {
	list-style-type: none;
	margin-left: 10%;
	

}

.navBtn {
	float: left;
	padding: 16px 35px;
}

.navBtn:hover {
	background-color: #0C0C0C;
}


/***************************************************
	CONTENT
****************************************************/
#contentDiv {
	/*min-height: 100%;
	/*background-color: #0C0C0C;
	border-style: inset;
	border-width: 6px;
	border-color: #0F0F0F;*/
	z-index: 1;
}

#contentWrapper {
	padding-left: 20%;
	padding-top: 7%;
	padding-right: 18%;
}

#contentText {
	position: relative;
}


#contentWrapper h1 {
	color:#16B8BF;
}


#contentWrapper p {
	display: inline;
	font-size: 18px;
	line-height: 25px;
	color:#808080;
}

#contentWrapper .hl { /*highlight*/
	color: #1F1F1F;
	font-weight: bold;
}

#contentWrapper .subtitle {
	color:#16B8BF;
	font-size: 22px;
	font-weight: bold;
}

#contentWrapper .yearTitle {
	font-style: italic;
	font-weight: bold;
	color: #626262;
}

#contentWrapper ul {
	margin-left: 2.5%;
	font-size: 18px;
	line-height: 25px;
	color:#808080;
}

#contentWrapper .myQuote {
	color: #1F1F1F;
	font-size: 28px;
	font-style: italic;
}



/*for skills tab*/
#rightSkillList {
	float: left;
	position: absolute;
	left: 41%;
	top: 35%;
}

#workGalleryWrapper {
	margin-top: 7%;
}

#galleryTitle {
	margin-left: 20%;
}

#gallery{
	text-align: center;
	margin-right: auto;
	margin-left: auto;
}

.gallerypic {
	width: 200px;
	height: 150px;
}

/***************************************************
	GAMELINK
****************************************************/
#gamelink {
	background-color: #16B8BF;
	color: #FFFFFF;
	font-size: 20px;

	text-align: center;
	
	margin-top: 10%;
	padding-top: 4%;
	padding-bottom: 4%
}

#gamelink a {
	text-decoration: none;
	color: #FFFFFF;
}


/***************************************************
	FOOTER
****************************************************/
footer {
	min-height: 15%;
	background-color: #252525;
	position: relative;

	padding-left: 10%;
	padding-top: 3%;
}

.footerHeader {
	font-size: 24px;
	font-weight: bold;
	color: #16B8BF;
}

.contactText {
	font-size: 16px;
	vertical-align: middle;
}

#followInfo {
	position: absolute;
	left: 50%;
	top: 14%;
}

#followInfo img {
	margin-left: 15px;
}



/***************************************************
	CHATROOM
****************************************************/
/*#followInfo, #chatroomWrapper {
	margin-left: 10%;
	position: absolute;
	left: 30%;
	top: 0%;
}*/

#chatroomWrapper {
	left: 50%;
}

#nameBox {
	margin-left: 3%;
}

#chatbox {
	width: 100%;
	max-width: 100%;
	height: 75px;
	background-color: white;
	color: black;
	overflow: auto;
}

#chatMsgBox{

}

#admin {
	color: #16B8BF;
}

